[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learnweb-automation"
version = "0.1.0"
description = "Automation for checking updates of LearnWeb courses at the University of Hildesheim."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
    "python-dotenv>=0.21.0"
]
